--- a/styles.css
+++ b/styles.css
@@ -700,7 +700,7 @@ body.admin-page {
     left: 0;
     width: var(--vertical-menu-width);
     height: calc(100vh - 70px);
-    background-color: #2c2c2c;
+    background-color: #050505;
     transform: translateX(-100%);
     transition: transform 0.3s ease-in-out;
     z-index: 999;
