--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,11 @@ input, textarea, button {
 
 /* Main Navigation Menu */
 .main-menu {
-    background-color: var(--color-black);
+    background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(0, 0, 0, 1) 100%
+    );
     padding: 20px;
     position: fixed;
     top: 0;
