--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,9 @@ input, textarea, button {
 /* Main Navigation Menu */
 .main-menu {
     background: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0) 100%,
-        rgba(0, 0, 0, 1) 0%
+        to top,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(0, 0, 0, 1) 100%
     );
     padding: 20px;
     position: fixed;
