--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,7 @@ input, textarea, button {
 
 /* Main Navigation Menu */
 .main-menu {
-    background: linear-gradient(
-        to top,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(0, 0, 0, 1) 100%
-    );
+    background-color: var(--color-black);
     padding: 20px;
     position: fixed;
     top: 0;
